fix: hide runners on mobile

--- a/static/style/styles.css
+++ b/static/style/styles.css
@@ -52,6 +52,12 @@ a {
     margin-right: 0;
 }
 
+@media (max-width: 720px) {
+    .runner-image {
+        display: none;
+    }
+}
+
 .content {
     margin-top: 20px;
     margin: auto;
